unpackaged/main/default/objects/appirio_core__Config_Value__c/appirio_core__Config_Value__c.object-meta.xml
<CustomObject>
    <customHelpPage>appirio_core__ConfigurationHelp</customHelpPage>
    <description>Core package object. Edit, add, or delete configuration values to change the setup or behavior of FinancialForce PSA. Each configuration value is contained in a configuration option and defines a value--for example, true or false. Configuration values may also define sort order, display width, or custom attributes depending on the parent configuration option. Configuration values have a master-detail lookup to their parent configuration group.</description>
    <label>Configuration Value</label>
    <nameField>
        <displayFormat>CV{000000}</displayFormat>
        <label>Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>