unpackaged/main/default/objects/appirio_core__Config_Value__c/fields/appirio_core__Config_Option__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Config_Option__c</fullName>
    <label>Configuration Option</label>
    <referenceTo>appirio_core__Config_Option__c</referenceTo>
    <relationshipLabel>Values</relationshipLabel>
    <relationshipName>Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>