unpackaged/main/default/objects/appirio_core__Config_Value__c/fields/appirio_core__Sort__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Sort__c</fullName>
    <description>Optional sort order for values</description>
    <label>Sort</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>