unpackaged/main/default/objects/appirio_core__Config_Value__c/fields/appirio_core__Value__c.field-meta.xml
<CustomField>
    <fullName>appirio_core__Value__c</fullName>
    <label>Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>