unpackaged/main/default/objects/appirio_core__Config_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>appirio_core__Config_Option__c</columns>
    <columns>appirio_core__Value__c</columns>
    <columns>appirio_core__Sort__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>